k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bamoe-demo
  labels:
    name: bamoe-demo
